Fix five remaining robustness issues: persist node alarms, guard against ghost agent hashes, null-safe heartbeat processing, eliminate deserializer double-parse, and fix test mocks
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>